2007-02-23  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Validate pushIds.
	  Expire opaque/nonce pairs.
	  Send 'stale' when appropriate.
	  Identify our server as flumotion (as well as Cougar)

2007-02-23  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Parse more of headers to find out whether the stream will contain
	  keyframes.
	  Parse data packet payload headers to see if this is a keyframe.
	  Use timestamps, duration, and delta-unit flags on buffers.

2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Rewrite buffer handling, set timestamps, durations, and appropriate
	  flags (but those come from a stubbed-out method for the moment)

2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Move to BaseSrc, as PushSrc.do_create() isn't wrapped properly.
	  Fix up return values from do_create()
	  Stop dumping to file.
	* flumotion/component/producers/wms.py:
	  Chain up to ParseLaunchComponent.do_start(), so that the pipeline
	  gets started.
	* flumotion/component/producers/wms.xml:
	  Fix up bundling information

2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Cleanup for previous changes so it now works as well as previously
	  (this is not yet very well). Dumps a file to /tmp/dump1.asf
	  successfully.

2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/Makefile.am:
	  Add queue.py
	* flumotion/component/producers/queue.py:
	  Add simple async queue object
	* flumotion/component/producers/asfparse.py:
	  Move all the ASF/HTTP parsing in here, clean it up, clean up
	  ASF parsing, redesign API
	  Add a gstreamer element called ASFSrc
	* flumotion/component/producers/wms.py:
	  Use ASFSrc
