@@ -1,3 +1,10 @@
+2007-02-26  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/asfparse.py:
+	* flumotion/component/producers/queue.py:
+	* flumotion/component/producers/wms.py:
+	  Prevent multiple connections to this component from interfering.
+
 2007-02-23  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/wms.py:
